Hides work with me page and adds images
also minor edits to blog posts

--- a/_portfolio/ou-framework-document.html
+++ b/_portfolio/ou-framework-document.html
@@ -1,11 +1,11 @@
 ---
 layout: portfolio-item
 title: Ohio University Strategic Framework Booklet
-subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
+subtitle: Printed book presenting a university's strategic plan and major upcoming initiatives.
 project-date: 2019-09-15
 work-type: Print Design
 front-image: /img/portfolio/strategic-framework-front.jpg
-front-image-alt: "dinosaur scultptures"
+front-image-alt: "a book is open to two pages with text, green boxes, and photos"
 published: true
 ---
 
@@ -16,11 +16,22 @@ published: true
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-lg-6 col-lx-7">
+        
+        <div class="col-lg-8 offset-lg-2 mb-2">
+            <p>This printed booklet provides an in-depth breakdown of Ohio University's strategic plan. It contains four strategic themes and defines eleven major initiatives that support the reshaping of Ohio University to best position it for the future.</p>
+            <p>I was provided with a variety of stunning images for use in this publication that inspired me to use photography as a playful focal point of the design. I enjoyed creating a balance between the longform copy, bulleted text, and colorful visuals showcasing university activities. Throughout the 30-page booklet I employed a flexible grid that allowed the text and photography to push and pull across the pages.</p>
+        </div>
+        <div class="col-lg-6 mb-4">
+            <img class="img-fluid" src="../../img/portfolio/strategic-framework-internal4.jpg" alt="page design showing a full experience layout" />
+        </div>
+        <div class="col-lg-6 mb-4">
+            <img class="img-fluid" src="../../img/portfolio/strategic-framework-internal3.jpg" alt="page design showing a full experience layout" />
+        </div>
+        <div class="col-lg-6 mb-4">
             <img class="img-fluid" src="../../img/portfolio/strategic-framework-internal2.jpg" alt="page design showing a full experience layout" />
         </div>
-        <div class="col-lg-6 col-xl-5">
-            <p>The Center was first conceptualized in early 2014 as post-incarceration transitional housing, a homeless shelter, and soup kitchen and became a rallying point for the local community, with more than 1000 volunteers coming together to renovate the building.</p>
+        <div class="col-lg-6 mb-4">
+            <img class="img-fluid" src="../../img/portfolio/strategic-framework-internal5.jpg" alt="page design showing a full experience layout" />
         </div>
     </div>
-</div>ß
+</div>
