--- a/_posts/2022-02-20-boring-unit-name-please.html
+++ b/_posts/2022-02-20-boring-unit-name-please.html
@@ -2,7 +2,7 @@
 layout: post
 title: Your student service office should have a “boring” name
 date: 2022-02-20 16:45:13 -0400
-background: '/img/posts/02.jpg'
+background: '/img/posts/arrow-sign-snow.jpg'
 published: true
 ---
 
@@ -19,14 +19,16 @@ Students wade through countless emails, red tape, paperwork, text and steps to c
 
 <p>I’ve seen this happen most often when multiple offices are merged and need a new grouped name. On one such occasion someone proposed they name the group of student services “The Collective.”</p>
 
-<h2>Dissuade yourself from flashy names</h2>
+<h2>Dissuade yourself from flashy names.</h2>
 <p>Ask yourself: “If I didn’t know about this office, would this name give me an idea of what they could help me with?”</p>
 
 <h3>Are we trying to be “clever”?</h3>
-If you’re trying to be clever, then people will need to be clever to figure out what you are offering them. Don’t make people work for it or guess. Because they won’t. They will just move on.
+<p>If you’re trying to be clever, then people will need to be clever to figure out what you are offering them. Don’t make people work for it or guess. Because they won’t. They will just move on.</p>
 
 <h3>“But people will learn what the name means.”</h3>
 <p>You are not Google. Your college student service office title will not become a household name. Help students find you so you can help them. </p>
 
-<h2>A note on Acronyms</h2>
-<p>You want your office to have a cool acronym... so that you can use it as the name. You feel like you’re cheating the system and beating the game, but you’re committing the transgressions mentioned above.  Stop trying to be cool.  “The CARS” does not tell me that you are the ‘Center for Agricultural Resilience and Sustainability’. It leads me in a different direction entirely. If you insist on having an acronym that spells a word, please make it relevant to your unit. Use acronyms wisely, and let people adopt them later... after they have learned your name and know what you are about.</p>
+<h2>A note on Acronyms:</h2>
+<p>You want your office to have a cool acronym... so that you can use it as the name. You feel like you’re cheating the system and beating the game, but you’re committing the transgressions mentioned above.  Stop trying to be cool. “The CARS” does not tell me that you are the ‘Center for Agricultural Resilience and Sustainability’. It leads me in a different direction entirely. If you insist on having an acronym that spells a word, please make it relevant to your unit. Use acronyms wisely, and let people adopt them later... after they have learned your name and know what you are about.</p>
+
+<p class="fine-print">Post photo by Jens Johnsson from <a href="https://www.pexels.com/photo/brown-wooden-arrow-signed-66100/">Pexels</a></p>
