--- a/_posts/2022-02-26-website-where-to-start.html
+++ b/_posts/2022-02-26-website-where-to-start.html
@@ -6,7 +6,7 @@ background: '/img/posts/02.jpg'
 published: true
 ---
 
-<p>So you've decided you want (or need) a website. You're planning to reach out to a web designer/agency/marketing department, and you're nervous about their expectations. Here's a list of things you can bring with you 'to the table'</p>
+<p>You've decided you want (or need) a website. You're planning to reach out to a web designer/agency/marketing department, and you're nervous about their expectations. Here's a list of things you can bring with you 'to the table'</p>
 <ul>
     <li>How should you get started?</li>
     <li>When you mean with.. someone, what questions should you be prepared to answer?</li>
