--- a/about.html
+++ b/about.html
@@ -1,19 +1,23 @@
 ---
 layout: page
 title: About Me
-description: I enjoy creating new, on-brand web designs and writing code to bring them to the web. Read more about my skills and interests.
+description: I enjoy creating new, on-brand web designs and writing code to bring them to the web.
 background: '/img/bg-about.jpg'
-last-updated: February 13, 2022
+last-updated: April 27, 2022
 ---
 
-<p>I am a web design and development manager of an enterprise-wide university website with 200+ CMS editors. I have over nine years of experience in various areas of design including web, digital, and print design, and have eight years of service in the higher education landscape. I currently oversee the style, structure, functionality, and technical advancement of the university's web spaces, and design and build new pages and sites for high-level initiatives. I enjoy the complex artistry of web design and the structure and exactness of front-end code. I crave organization and I'm motivated by helping others achieve their goals.</p>
+<img class="img-thumbnail float-left mr-4 mb-2 mt-4" style="width: 40%;" src="../../img/haley-computer-glasses.jpg" alt="portrait photograph of Haley Hopper wearing glasses and a soft smile" />
+<p>I am a web and graphic designer and front-end developer. I have over nine years of experience in various areas of design including web, digital, and print design, and have eight years of service in the higher education landscape.</p>
+<p>I enjoy the complex artistry of web design and the structure and exactness of front-end code. I crave organization and I'm motivated by helping others achieve their goals.</p>
+
+<p>These days, I spend the majority of my working time supporting the style, structure, functionality, and technical advancement of an enterprise-wide university website with 200+ CMS editors, as well as designing and building new pages and sites for high-level initiatives. I am open to taking on additional projects, especially if they allow me to explore new topics! <a href="#footer">Contact me if you'd like to discuss your project</a>.</p>
 
 <p>I like good paper, home DIY projects, and strawberry cheesecake.
 (And I don't think that fruit should be on pizza.)</p>
 
-<div class="row">
+<div class="row mb-4">
   <div class="col-md-12">
-    <h2>Skills</h2>
+    <h2 class="section-heading">Skills</h2>
   </div>
   <div class="col-md-6">
     <h3>Web Strategy</h3>
@@ -21,21 +25,21 @@ last-updated: February 13, 2022
       <li>Web Project Management</li>
       <li>Enterprise-wide Websites</li>
       <li>Centralized Site Management</li>
-      <li>Web Accessibility</li>
       <li>Content Management Systems</li>
+      <li>Information Architecture</li>
       <li>Web Content Assessment</li>
       <li>Web Migration</li>
       <li>Client Communication</li>
       <li>Higher Education Websites</li>
-      <li>Information Architecture</li>
     </ul>
   </div>
   <div class="col-md-6">
     <h3>Web Development</h3>
     <ul>
+      <li>Responsive Development</li>
       <li>HTML</li>
       <li>CSS</li>
-      <li>Responsive Development</li>
+      <li>Web Accessibility</li>
       <li>Drupal CMS</li>
       <li>Javascript Implementation</li>
       <li>XML</li>
@@ -64,15 +68,20 @@ last-updated: February 13, 2022
       <li>Adobe InDesign</li>
     </ul>
   </div>
-  
 </div>
-
-
-<h2>Personal Facts</h2>
-<ul class="mb-5">
-  <li><a href="https://baconipsum.com/" target="_blank">Fan of Bacon Ipsum</a></li>
-  <li><a href="http://howtoreallypronouncegif.com/" target="_blank">Pronounces it gif, not jif</a></li>
-  <li>Supports the Oxford Comma</li>
-  <li>Makes handmade soap</li>
-  <li><a href="https://www.youtube.com/watch?v=XMZIAlKFRY4" target="_blank">Allergic to gluten</a></li>
-</ul>
+<div class="row">
+  <div class="col-md-6">
+    <h2 class="section-heading">Personal Facts</h2>
+    <ul class="mb-5">
+      <li><a href="https://baconipsum.com/" target="_blank">Fan of Bacon Ipsum</a></li>
+      <li><a href="http://howtoreallypronouncegif.com/" target="_blank">Pronounces it gif, not jif</a></li>
+      <li>Supports the Oxford Comma</li>
+      <li>Makes handmade soap</li>
+      <li><a href="https://www.youtube.com/watch?v=XMZIAlKFRY4" target="_blank">Allergic to gluten</a></li>
+    </ul>
+  </div>
+  <div class="col-md-6">
+    <span class="caption text-muted">Haley and Haley, the penguin, at the aquarium</span>
+    <img class="img-fluid" src="../../img/penguin-haley-zoom.jpg" alt="page design showing a full experience layout" />
+  </div>
+</div>
