--- a/_posts/2020-01-29-work-with-designers.html
+++ b/_posts/2020-01-29-work-with-designers.html
@@ -15,13 +15,13 @@ background: '/img/posts/shaking-hands.jpg'
 <p>Provide a designer with context for your projects, not just text, images, and deadlines. The more information about your business, differentiators, target audience, and goals you can provide, the better a designer can tailor their work to your needs. You are asking them to represent you and your brand, so let them get to know you.</p></li>
 
 <li>Share examples.
-<p>Provide examples of what you like. Don’t say “we trust you,” just to turn around and then say, “This isn’t really what we were looking for.” What were you looking for? Avoid this needless circle by telling and — better yet — showing, your designer examples of what you are looking for. This will jumpstart your project in the desired direction.</p></li>
+<p>Provide examples of what you like. Don’t say “we trust you,” just to turn around and then say, “This isn’t really what we were looking for.” What were you looking for? Avoid this needless circle by telling and — better yet — showing your designer examples of what you are looking for. This will jumpstart your project in the desired direction.</p></li>
 
 <li>No copying.
 <p>(Follow up on #2) do not ask a designer to copy exactly what someone else has done. Not only are you asking your designer to unethically steal someone else’s work, you are undervaluing their potential contribution to your project. Your designer may come up with something even better than what you saw someone else do. Your business is not the same as whatever business has the ad/website/poster/etc. that you want to copy. The businesses are different, the selling points are different, and the solution should be different.</p></li>
 
 <li>You are not the only client.
-<p>You are not the only client. Designers have other work for other people who need it done, just like you. They cannot often drop what they are doing to help you with your crisis. This is true whether the designer is a contractor or in-house employee.</p></li>
+<p>You are not the only client. Designers have other work for other people who need it done, just like you. They cannot often drop what they are doing to help you with your crisis. This is true whether the designer is a contractor or an in-house employee.</p></li>
 
 <li>Compensation should match expectations.
 <p>(Follow up on #4) If you DO expect a designer to always drop what they are doing to help you with your crisis, then pay them accordingly (i.e. handsomely).</p></li>
