--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Portfolio
+title: Featured Projects
 background: '/img/bg-portfolio.jpg'
 ---
 
@@ -29,7 +29,7 @@ background: '/img/bg-portfolio.jpg'
 
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2">
       <!-- Portfolio Full Projects List Sorted by project-date -->
-      {% assign projects = site.portfolio | sort: 'project-date' | reverse %}
+      {% assign projects = site.projects | sort: 'project-date' | reverse %}
       {% for post in projects %}
       <div class="col mb-4">
         <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}" class="card h-100 full-portfolio project-preview">
@@ -37,7 +37,6 @@ background: '/img/bg-portfolio.jpg'
           <div class="card-img-overlay">
             <h2 class="card-title">{{ post.title }}</h2>
             <p class="card-text">{{ post.work-type }}</p>
-            <!-- <p class="card-text">{{ post.project-date | date: '%B %Y' }}</p> -->
           </div>
         </a>
       </div>
@@ -49,7 +48,7 @@ background: '/img/bg-portfolio.jpg'
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto text-center">
 
-       <p>You made it to the end! Thanks for taking a look.</p>
+       <p>Would your project fit right in here? Let's talk!</p>
 
       </div>
     </div>
