updates favicon, project, and post

--- a/_posts/2022-02-26-website-jargon-guide.html
+++ b/_posts/2022-02-26-website-jargon-guide.html
@@ -12,8 +12,11 @@ published: true
 
 <dl>
     <dt>Breakpoint</dt>
+        <dd>A breakpoint is a specific measurement (typically width) of your users screen at which the layout will change or shift. Breakpoints are used in code to tell the web browser which layouts and sizes to apply from the code in order to properly size your content for a user's current window or device width.</dd>
     <dt>CSS</dt>
+        <dd>"CSS" stands for 'cascading style sheets.' (You do not need to remember this.) CSS is the code in a website that dictates how various web elements appear on the screen. It includes rules for font sizes, colors, layout, image sizing, and much more.</dd>
     <dt>CTA</dt>
+        <dd>This acronym means "call to action." In your website it is important to provide simple and clear indications to your users for the actions you want them to take next, a 'call to action.' CTAs are often used as buttons or elements with visual importance and represent a next step for your users, such as "Add to Cart" or "Apply Now."</dd>
     <dt>HTML</dt>
     <dt>IA</dt>
     <dt>Mobile-first</dt>
@@ -22,6 +25,10 @@ published: true
     <dt>SEO</dt>
         <dd>stands for "Search Engine Optimization" and refers to intentionally using words in your website content that your target audience would be searching for, therefore 'optimizing' your site to be served up by search engines when your potential customers search the web</dd>
     <dt>UI</dt>
+        <dd>This acronym means "user interface." The user interface of a website or application is the screen and various visual components with which a user can interact.</dd>
     <dt>User Testing</dt>
     <dt>UX</dt>
+        <dd>"UX" stands for 'user experience.' The user's experience of a website encompasses their entire interaction with your digital product. We typically use this term with the intention of <em>improving</em> the user experience by making a website or application easier to use. Users can experience frustration or friction when trying to find information on your website, filling out a form, or making a purchase. When we focus on the user's experience we aim to remove friction and make the interaction process simple and smooth.</dd>
+    <dt>Viewport</dt>
+        <dd>The viewport refers to the contraint of a users viewing area for your website. This could be their cellphone or tablet screen, or their web browser window. This term is often used along side the word 'width,' when referrencing viewport width for responsive design. A user can change their viewport by resizing their browser window, or rotating their handheld device into a different orientation.</dd>
 </dl>
