--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ title: Contact Me
 description: Have questions? I have answers.
 background: '/img/bg-contact.jpg'
 form: true
-published:false
+published: true
 ---
 
 <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
