hides and shows portfolio pages

--- a/_projects/belcher-memorial.html
+++ b/_projects/belcher-memorial.html
@@ -7,6 +7,7 @@ work-type: Web Design and Development
 site-type: Static HTML Site
 front-image: /img/portfolio/belcher-memorial-front.jpg
 front-image-alt: "dinosaur scultptures"
+published: false
 ---
 
 
