--- a/_projects/christmas-celebration.html
+++ b/_projects/christmas-celebration.html
@@ -6,7 +6,7 @@ project-date: 2014-10-15
 work-type: Print Design
 front-image: /img/portfolio/christmas-celebration-front.jpg
 front-image-alt: "christmas event poster displayed next to a candy cane"
-published: true
+published: false
 ---
 
 <div class="container">
