--- a/_projects/gs-summer-brochure.html
+++ b/_projects/gs-summer-brochure.html
@@ -6,7 +6,7 @@ project-date: 2014-12-15
 work-type: Print Design
 front-image: /img/portfolio/gs-summer-brochure-front.jpg
 front-image-alt: "two printed program guides displaying camp options are displayed on wooden boards"
-published: true
+published: false
 ---
 
 <p>This new website showcases the stories of the WCU community. The site provides a digital space for content marketing articles, news, and announcements to live together- a space previously unpossessed by the university. I designed an entirely new navigation experience and page layout for this site, creating a landing page which displays a diverse set of static and feed-based content.</p>
