--- a/_projects/leadership-summit.html
+++ b/_projects/leadership-summit.html
@@ -7,7 +7,7 @@ work-type: Web Design and Development
 site-type: static HTML site
 front-image: /img/portfolio/leadership-summit-front.jpg
 front-image-alt: "dinosaur scultptures"
-published: false
+published: true
 ---
 
 <p>This new website showcases the stories of the WCU community. The site provides a digital space for content marketing articles, news, and announcements to live together- a space previously unpossessed by the university. I designed an entirely new navigation experience and page layout for this site, creating a landing page which displays a diverse set of static and feed-based content.</p>
