--- a/_projects/ou-building-directory.html
+++ b/_projects/ou-building-directory.html
@@ -7,7 +7,7 @@ work-type: Web Design and Development
 site-type: Drupal CMS site
 front-image: /img/portfolio/directory-front.jpg
 front-image-alt: "building directory website on laptop, tablet, and mobile devices"
-published: true
+published: false
 ---
 
 <h2 class="section-heading">Project Goals</h2>
