--- a/_projects/ou-forever-page.html
+++ b/_projects/ou-forever-page.html
@@ -7,7 +7,7 @@ work-type: Web Design and Development
 site-type: Drupal CMS Landing page
 front-image: /img/portfolio/experience-front.jpg
 front-image-alt: "university website homepage thumbnail"
-published: true
+published: false
 ---
 
 <p>Ohio University needed a branded campaign landing webpage for the new Forever OHIO brand platform. It is linked to by the university homepage and digital advertisements, is listed as the website address in print materials and tv campaigns, and is sometimes the first digital interaction that a prospective student has with the institution.</p>
