--- a/_projects/give-to-ohio.html
+++ b/_projects/give-to-ohio.html
@@ -7,7 +7,7 @@ work-type: Web Design Adjustments and Development
 site-type: Drupal CMS site
 front-image: /img/portfolio/give-ohio-front.jpg
 front-image-alt: "dinosaur scultptures"
-published: true
+published: false
 ---
 
 <h2>Goal 1</h2>
