updates wcu stories portfolio page

--- a/_projects/wcu-stories.html
+++ b/_projects/wcu-stories.html
@@ -6,8 +6,25 @@ project-date: 2020-05-15
 work-type: Web Design
 site-type: CMS Site
 front-image: /img/portfolio/wcu-stories-front.jpg
-front-image-alt: "dinosaur scultptures"
+front-image-alt: "top of the WCU Stories homepage design shown in a web browser"
 published: true
 ---
 
-<p>This new website showcases the stories of the WCU community. The site provides a digital space for content marketing articles, news, and announcements to live together- a space previously unpossessed by the university. I designed an entirely new navigation experience and page layout for this site, creating a landing page which displays a diverse set of static and feed-based content.</p>
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            <p>This new website showcases the stories of the WCU community. The site provides a digital space for content marketing articles, news, and announcements to live together- a space previously unpossessed by the university. I designed an entirely new navigation experience and page layout for this site, creating a landing page which displays a diverse set of static and feed-based content.</p>
+        </div>
+        <div class="col-md-8 offset-md-2 text-center">
+            <a class="btn btn-primary" href="https://www.wcu.edu/stories/index.aspx" target="_blank">Visit the Site</a>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-lg-12 col-xl-10 offset-xl-1">
+            <img class="img-fluid" src="../../img/portfolio/wcu-stories-internal.jpg" alt="full landing page layout of the WCU stories website" />
+        </div>
+    </div>
+    
+</div>
