changes inquire page intro text

--- a/inquire.html
+++ b/inquire.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Inquire
-description: Want to work together? Let's get started!
+title: Let's get started!
+description: Initial Inquiry Contact Form
 background: '/img/bg-contact.jpg'
 form: false
 published: true
