changes inquire background image

--- a/inquire.html
+++ b/inquire.html
@@ -2,7 +2,7 @@
 layout: page
 title: Let's get started!
 description: Initial Inquiry Contact Form
-background: '/img/bg-contact.jpg'
+background: '/img/bg-inquire.jpg'
 form: false
 published: true
 ---
