updates the homepage layout and content

--- a/index.html
+++ b/index.html
@@ -1,32 +1,112 @@
 ---
 layout: home
 title: "Haley Hopper"
-subtitle: "Web Design &amp; Development Strategist"
+subtitle: "Nature-Inspired Branding and Web Design"
 background: '/img/bg-index.jpg'
 ---
 
-<p>I create strategic, modern web design that will boost your business’s online brand.</p>
-<p>You're dealing with:</p>
-<ul>
-    <li>Out-dated designs</li>
-    <li>Content your target audience doesn’t care about</li>
-    <li>Lack of next-steps or unclear what action to take next</li>
-    <li>Confusing page layouts and user experience</li>
-</ul>
+<div class="row bg-white pt-2 pb-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto text-center">
+        <h2>You work too hard to be undermined by your branding</h2>
+        <p>You work hard on your business. Your branding should work just as hard.</p>
+      </div>
+      <div class="col-lg-6 col-md-10 mx-md-auto">
+        <img class="img-fluid" src="https://via.placeholder.com/1080x700">
+      </div>
+      <div class="col-lg-6 col-md-10 mx-md-auto">
+        <p>When you aren't around to give the elevator pitch for your business, your branding is doing it for you. Your brand is telling your potential customers:</p>
+        <ul class="failure-list">
+            <li>Your business is low quality</li>
+            <li>You're out-of-touch with today's customers</li>
+            <li>Your products and services aren't the right fit</li>
+            <li>Your business has a personality that they aren't interested in</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
 
-<p>If you work with me you'll have:</p>
-<ul>
-    <li>Content hierarchy for what your users are seeking</li>
-    <li>Modern aesthetic showing you care about your online reputation</li>
-    <li>Focus on responsive behavior so your site meets users where they are – on their phones.</li>
-</ul>
+<div class="row bg-primary pt-2 pb-5 text-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2 class="section-heading">Let's fix it.</h2>
+      </div>
+      <div class="col-lg-6 col-md-10 mx-auto">
+        <p>I don't just care about good design. I care about your business success.</p>
+        <p>High-caliber branding tells your customers you care about reputation and quality. I'm here to help you level-up your brand so you can focus on the reasons you started your small business in the first place: to improve people's lives through superior experiences, products, and services.</p>
+        <p>Let's get the ball rolling.</p>
+        <a class="btn btn-secondary" href="{{"/inquire" | relative_url }}">Inquire</a>
+      </div>
+      <div class="col-lg-6 col-md-10 mx-auto">
+        <p>If you work with me you'll have:</p>
+        <ul>
+            <li>Content hierarchy for what your users are seeking</li>
+            <li>Modern aesthetic showing you care about your online reputation</li>
+            <li>Focus on responsive behavior so your site meets users where they are – on their phones</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
 
-<p>Hi! I’m Haley Hopper. I’m a web designer and front-end developer with more than a decade of experience in the digital landscape. I create data-driven, user-focused designs for businesses to level-up their online presence and modernize their style while staying true to their core brand.</p>
-<p>When you work with me, you should expect questions like “What are your key differentiators?” and “What are the primary goals of your target audience?” not “What colors do want your buttons to be?”</p>
-<p>I’m not a good fit for you if:</p>
-<ul>
-    <li>You are looking for someone to just “make it pretty.”</li>
-    <li>You don’t like someone asking questions and you want them the to blindly follow instructions.</li>
-    <li>You aren’t open to someone pushing back on ideas in advocation for end users and customers.</li>
-</ul>
-<p>Do we sound like a match? Tell me about your project.</p>
+<div class="row bg-floralwhite">
+  <div class="container">
+    <div class="col-lg-8 col-md-10 mx-auto">
+      <p>Introduce yourself</p>
+      <p>I create strategic, modern web design that will boost your business’s online brand.</p>
+      <p>Hi! I’m Haley Hopper. I’m a web designer and front-end developer with more than a decade of experience in the digital landscape. I create data-driven, user-focused designs for businesses to level-up their online presence and modernize their style while staying true to their core brand.</p>
+      <p>When you work with me, you should expect questions like “What are your key differentiators?” and “What are the primary goals of your target audience?” not “What colors do want your buttons to be?”</p>
+      <p>I’m not a good fit for you if:</p>
+      <ul>
+          <li>You are looking for someone to just “make it pretty.”</li>
+          <li>You don’t like someone asking questions and you want them the to blindly follow instructions.</li>
+          <li>You aren’t open to someone pushing back on ideas in advocation for end users and customers.</li>
+      </ul>
+      <p>Do we sound like a match? Tell me about your project.</p>
+    </div>
+  </div>
+</div>
+
+<div class="row bg-goldenrod">
+  <div class="container">
+    <div class="col-lg-8 col-md-10 mx-auto">
+      <p>Services/Products</p>
+      <p>get products in. well here’s how we can resolve your problems.
+        Could be products. Could be 3 differect sections or divisions of company. All need to solve my problems in different ways.</p>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h2 class="section-heading mb-3">The Plan</h2>
+      </div>
+      <div class="col-md-4">
+        <h3>1</h3>
+        <p>Ask for the sale. But people are resistent. They are at risk.
+          How it works. “Hey, its not difficult to work with us.” show them the plan. in three steps.
+          CTA button</p>
+      </div>
+      <div class="col-md-4">
+        <h3>2</h3>
+        <p>Ask for the sale. But people are resistent. They are at risk.
+          How it works. “Hey, its not difficult to work with us.” show them the plan. in three steps.
+          CTA button</p>
+      </div>
+      <div class="col-md-4">
+        <h3>3</h3>
+        <p>Ask for the sale. But people are resistent. They are at risk.
+          How it works. “Hey, its not difficult to work with us.” show them the plan. in three steps.
+          CTA button</p>
+      </div>
+      <div class="col-md-12 text-center mt-2">
+        <a class="btn btn-primary" href="{{"/inquire" | relative_url }}">Inquire</a>
+      </div>
+    </div>
+  </div>
+</div>
