changes to homepage content

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ background: '/img/bg-index.jpg'
       <div class="col-lg-6 col-md-10 mx-auto">
         <p>I don't just care about good design. I care about your business success.</p>
         <p>High-caliber branding tells your customers you care about reputation and quality. I'm here to help you level-up your brand so you can focus on the reasons you started your small business in the first place: to improve people's lives through superior experiences, products, and services.</p>
-        <p>Let's get the ball rolling.</p>
+        <p>Let's get the ball rolling:</p>
         <a class="btn btn-secondary" href="{{"/inquire" | relative_url }}">Inquire</a>
       </div>
       <div class="col-lg-6 col-md-10 mx-auto">
@@ -54,55 +54,67 @@ background: '/img/bg-index.jpg'
 
 <div class="row bg-floralwhite">
   <div class="container">
-    <div class="col-lg-8 col-md-10 mx-auto">
-      <p>Introduce yourself</p>
-      <p>I create strategic, modern web design that will boost your business’s online brand.</p>
-      <p>Hi! I’m Haley Hopper. I’m a web designer and front-end developer with more than a decade of experience in the digital landscape. I create data-driven, user-focused designs for businesses to level-up their online presence and modernize their style while staying true to their core brand.</p>
-      <p>When you work with me, you should expect questions like “What are your key differentiators?” and “What are the primary goals of your target audience?” not “What colors do want your buttons to be?”</p>
-      <p>I’m not a good fit for you if:</p>
-      <ul>
-          <li>You are looking for someone to just “make it pretty.”</li>
-          <li>You don’t like someone asking questions and you want them the to blindly follow instructions.</li>
-          <li>You aren’t open to someone pushing back on ideas in advocation for end users and customers.</li>
-      </ul>
-      <p>Do we sound like a match? Tell me about your project.</p>
+    <div class="row mt-5 mb-5">
+      <div class="col-md-4 offset-md-1">
+        <img class="img-fluid" src="img/haley.jpg">
+      </div>
+      <div class="col-md-6">
+        <h2 class="mt-4">Hi! I’m Haley Hopper.</h2>
+        <p>I create strategic, user-focused brands and designs for businesses to level-up their online presence and modernize their style while staying true to their core personality.</p>
+        <p> I am a designer and web developer with more than a decade of experience in the design and digital landscape.</p>
+      </div>
+      <div class="col-md-9 mx-auto">
+        <p>When you work with me, you should expect questions like “What are your key differentiators?” and “What are the primary goals of your target audience?” not “What colors do want your buttons to be?”</p>
+        <p>I’m not a good fit for you if:</p>
+        <ul class="failure-list">
+            <li>You are looking for someone to just “make it pretty.”</li>
+            <li>You don’t like someone asking questions and you want them the to blindly follow instructions.</li>
+            <li>You aren’t open to someone pushing back on ideas in order to advocate for your end users and customers.</li>
+        </ul>
+        <p>Do we sound like a match? Tell me about your project.</p>
+        <a class="btn btn-secondary" href="{{"/inquire" | relative_url }}">Inquire</a>
+      </div>
     </div>
   </div>
 </div>
 
 <div class="row bg-goldenrod">
   <div class="container">
-    <div class="col-lg-8 col-md-10 mx-auto">
-      <p>Services/Products</p>
-      <p>get products in. well here’s how we can resolve your problems.
-        Could be products. Could be 3 differect sections or divisions of company. All need to solve my problems in different ways.</p>
+    <div class="row mt-5 mb-5 justify-content-center">
+      <div class="col-md-5 border border-primary m-3">
+        <h3 class="mt-4">Branding</h3>
+        <p>get products in. well here’s how we can resolve your problems.
+          Could be products. Could be 3 differect sections or divisions of company. All need to solve my problems in different ways.</p>
+      </div>
+      <div class="col-md-5 border border-primary m-3">
+        <h3 class="mt-4">Web Design</h3>
+        <p>get products in. well here’s how we can resolve your problems.
+          Could be products. Could be 3 differect sections or divisions of company. All need to solve my problems in different ways.</p>
+      </div>
+      <div class="col-md-10 mx-auto text-center">
+        <a class="btn btn-primary" href="{{"/work-with-me" | relative_url }}">See Packages</a>
+      </div>
     </div>
   </div>
 </div>
 
 <div class="row">
   <div class="container">
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <h2 class="section-heading mb-3">The Plan</h2>
+    <div class="row text-center">
+      <div class="col-md-12">
+        <h2 class="section-heading mb-3">How it Works</h2>
       </div>
       <div class="col-md-4">
-        <h3>1</h3>
-        <p>Ask for the sale. But people are resistent. They are at risk.
-          How it works. “Hey, its not difficult to work with us.” show them the plan. in three steps.
-          CTA button</p>
+        <h3>01. Explore</h3>
+        <p>We work together to clarify your brand strategy, audience, and goals.</p>
       </div>
       <div class="col-md-4">
-        <h3>2</h3>
-        <p>Ask for the sale. But people are resistent. They are at risk.
-          How it works. “Hey, its not difficult to work with us.” show them the plan. in three steps.
-          CTA button</p>
+        <h3>02. Design</h3>
+        <p>I get to work and create design solutions that will help us meet your brand’s goals, checking in with you throughout the process.</p>
       </div>
       <div class="col-md-4">
-        <h3>3</h3>
-        <p>Ask for the sale. But people are resistent. They are at risk.
-          How it works. “Hey, its not difficult to work with us.” show them the plan. in three steps.
-          CTA button</p>
+        <h3>03. Launch</h3>
+        <p>I walk you through your new brand and website, teach you how to use them moving forward, and we go live!</p>
       </div>
       <div class="col-md-12 text-center mt-2">
         <a class="btn btn-primary" href="{{"/inquire" | relative_url }}">Inquire</a>
