--- a/_projects/wcu-stories.html
+++ b/_projects/wcu-stories.html
@@ -15,15 +15,53 @@ published: true
 <div class="container">
     <div class="row">
         <div class="col-md-8 offset-md-2">
-            <p>This new website showcases the stories of the WCU community. The site provides a digital space for content marketing articles, news, and announcements to live together- a space previously unpossessed by the university. I designed an entirely new navigation experience and page layout for this site, creating a landing page which displays a diverse set of static and feed-based content.</p>
+            <p>This new website showcases the stories of the WCU community. The site provides a digital space for content marketing articles, news, and announcements to live together- a space previously unpossessed by the university. I designed an entirely new navigation experience and page layouts for this site.</p>
         </div>
         <div class="col-md-8 offset-md-2 text-center">
             <a class="btn btn-primary" href="https://www.wcu.edu/stories/index.aspx" target="_blank">Visit the Site</a>
         </div>
     </div>
     <div class="row mt-4">
-        <div class="col-lg-12 col-xl-10 offset-xl-1">
-            <img class="img-fluid" src="../../img/portfolio/wcu-stories-internal.jpg" alt="full landing page layout of the WCU stories website" />
+        <div class="col-md-7">
+            <figure class="figure">
+                <img src="../../img/portfolio/wcu-stories-internal.jpg" class="figure-img img-fluid" alt="Full landing page layout of the WCU stories website.">
+                <figcaption class="figure-caption">WCU Stories homepage layout</figcaption>
+              </figure>
+        </div>
+        <div class="col-md-5">
+            <p>Designing the page layouts included creating a landing page which displays a diverse set of static and feed-based content. This content includes:</p>
+            <ul>
+                <li>recently published stories</li>
+                <li>stories featured from certain categories</li>
+                <li>static promotional sections spotlighting university strengths</li>
+                <li>video content</li>
+                <li>user-generated-content competitions</li>
+                <li>application campaign drivers</li>
+                <li>a 'Photo of the Week' section that highlights the visual appeal of the university campus</li>
+            </ul>
+            <p>To create visual distinction between the WCU Stories site and the main wcu.edu website, I leveraged the university's secondary brand color palette along with its primary purple color.</p>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-md-5">
+            <p>I designed the layout for the story category landing page and subsequent paginated pages. The most recently published story in the category displays with a featured-story treatment, followed by 50% width story display for the next two stories. Subsequent, older stories recieve the smallest treatment in the visual hierarchy, but remain easy to browse.</p>
+        </div>
+        <div class="col-md-7">
+            <figure class="figure">
+                <img src="../../img/portfolio/wcu-stories-pages.jpg" class="figure-img img-fluid" alt="Thumbnails of pages 1 and 2 of the story listing for the 'Academics' category shown over a purple background.">
+                <figcaption class="figure-caption">Pages 1 and 2 of the story listing for the 'Academics' category</figcaption>
+            </figure>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-lg-7">
+            <figure class="figure">
+                <img src="../../img/portfolio/wcu-stories-responsive.jpg" class="figure-img img-fluid" alt="Panels showing the layout of the Academics category story feed at mobile phone, tablet, and desktop web browser size.">
+                <figcaption class="figure-caption">Responsive layouts of the story listing for the 'Academics' category</figcaption>
+              </figure>
+        </div>
+        <div class="col-md-5">
+            <p>I designed all pages of the site to be responsive, including the story feed pages shown here.</p>
         </div>
     </div>
     
