adds text to the wedding invitation portfolio item

--- a/_projects/wedding-invitation.html
+++ b/_projects/wedding-invitation.html
@@ -12,5 +12,7 @@ published: true
 <div class="row">
     <div class="col-lg-8 offset-lg-2">
         <img class="img-fluid" src="../../img/portfolio/wedding-invitation-internal.jpg" alt="page design showing a full experience layout" />
-    </div>
+    <p>The chosen color palette for the wedding was plum and greenery. The couple included the reading of <a href="https://www.biblegateway.com/passage/?search=Matthew%206%3A25-34&version=NIV" target="_blank">Matthew 6:25-34</a> in the ceremony and wanted feathers featured in the invitation to align with this theme.</p>
+</div>
+    
 </div>
